# biosignalfoundry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  llm_config.py  llm_provider.py  pyproject.toml
.github/workflows/: test.yml
api_reference/: alphavintage_api.md  finnhub_api.md  fred_api.md  marketstack_api.md  massive_api.md
docs/api_reference/: alphavintage_api.md  edgartools.md  finnhub_api.md  fred_api.md  marketstack_api.md  massive_api.md  openfda.md  sec_edgar.md
docs/architecture_docs/: agent_tools.md  architecture_overview.md  data_providers.md  docker_setup.md
scripts/: evaluate_signals.py  record_signal.py  run_backtest.py
src/: app.py  biosignalfoundry.py  biothrone.py  main.py  utils.py
src/agent_tools/: financial_health_agent_tools.py
src/agents/: financial_health_agent.py
src/backtesting/: engine.py  price_loader.py  types.py
src/clients/: __init__.py  alphavintage.py  base.py  finnhub.py  fred.py  massive.py
src/core/: logging_config.py  redis_client.py  streaming_callback.py
src/data_providers/: __init__.py  alphavintage.py  base.py  finnhub.py  marketstack.py  massive.py  openfda.py  sec_edgar.py
src/middleware/: __init__.py  logging_middleware.py
src/prompts/: biosignalfoundry_prompt.py  biothrone_prompt.py  financial_health_agent_prompt.py
tests/: conftest.py  test_app_analyze.py
tests/integration/: conftest.py  test_app_integration.py  test_redis_cache.py
tests/unit/: test_app_analyze.py  test_backtesting_engine.py  test_financial_health_tools.py  test_streaming_callback.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: biosignalfoundry.ts  biothrone.ts
