[project]
name = "biothrone"
version = "0.0.1"
description = "An app that helps you achieve financial freedom"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "finnhub-python (>=2.4.26,<3.0.0)",
    "massive (>=2.0.2,<3.0.0)",
    "alpha-vantage (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
